fixes code display on mobile

--- a/assets/sass/articles.scss
+++ b/assets/sass/articles.scss
@@ -29,6 +29,7 @@ article li ul {
 /* Images */
 
 article p img {
+  width: 100%;
   max-width: 500px;
   display: block;
   margin: 2rem auto;
