--- a/assets/sass/basic.scss
+++ b/assets/sass/basic.scss
@@ -33,7 +33,8 @@ footer {
     padding: 10px;
     background-color: #272822;
     color: #f8f8f2;
-    width: 100%;
+    width: 90%;
+    overflow: scroll;
 }
 
 /* Header */
